# ruiyan_rh2_hand_bringup

./: CMakeLists.txt  README.md  package.xml
config/: controller_manager.yaml  ruiyan_rh2_hand_joint_position_controller.yaml  ruiyan_rh2_hand_joint_trajectory_controller.yaml
config/foxglove/: hand_ros2_control.json
launch/: ruiyan_rh2_hand_gripper_position_control.launch.py  ruiyan_rh2_hand_joint_position_control.launch.py  ruiyan_rh2_hand_joint_trajectory_control.launch.py
setup/: ruiyan_rh2_init.sh
test/: test_hand_position.py  test_hand_trajectory.py
urdf/: ruiyan_rh2_hand_left.urdf.xacro  ruiyan_rh2_hand_right.urdf.xacro
