<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ruiyan_rh2_hand_bringup</name>
  <version>1.0.0</version>
  <description>Launch and config files for starting the Ruiyan RH2 dexterous hand using ros2_control</description>
  <maintainer email="baoan.du.xj@renesas.com">Baoan Du</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Controller manager and standard controllers -->
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>

  <!-- Hardware interface -->
  <exec_depend>ruiyan_rh2_hand_ros2_control</exec_depend>

  <!-- Runtime message dependencies -->
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>

  <!-- Robot description dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ruiyan_rh2_hand_description</exec_depend>

  <!-- Utility nodes -->
  <exec_depend>dexhand_utils</exec_depend>

  <!-- Launch file dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <!-- Python dependencies for test -->
  <exec_depend>rclpy</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>